# GraphRAG-chatbot

./: Dockerfile  README.md  agent_test.py  docker-compose.yml  graphRAG_test.py  pyproject.toml  requirements.txt  test.py  text2sql_test.py
scripts/: deploy.bat  start.bat
src/RAG/: RAG_test.py  backend.py  frontend.py  main.py
src/RAG/api/: models.py  routes.py
src/RAG/chroma_db/: chroma.sqlite3
src/RAG/core/: config.py
src/RAG/frontend/: frontend.py
src/RAG/services/: base.py  llm_adapter.py  rag_service.py
