[project]
name = "graphrag-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "weijunjiang",email = "1366202829@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic (>=2.10.6,<2.11.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<2.8.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<2.33.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "llama-index-core (>=0.12.17,<0.13.0)",
    "streamlit (>=1.42.0,<1.43.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "llama-index (>=0.12.20,<0.13.0)",
    "llama-index-llms-ollama (>=0.5.2,<0.6.0)",
    "llama-index-embeddings-ollama (>=0.5.0,<0.6.0)",
    "llama-index-vector-stores-chroma (>=0.4.1,<0.5.0)",
    "llama-index-readers-file (>=0.4.5,<0.5.0)",
    "llama-index-node-parser-docling (>=0.3.1,<0.4.0)",
    "llama-index-readers-docling (>=0.3.1,<0.4.0)",
    "unstructured (>=0.16.23,<0.17.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
